--- a/All_About_me/index.qmd
+++ b/All_About_me/index.qmd
@@ -2,7 +2,7 @@
 
 ![About Me](../images/AZRL.png){width=950%}
 
-Armein Z R Langi adalah Guru Besar di Sekolah Teknik Elektro dan Informatika ITB, dosen ITB sejak Desember 1987, mantan Rektor Universitas Kristen Maranatha, 1 Maret 2016 s/d 29 Februari 2020, mantan Kepala Pusat Penelitian Teknologi Informasi dan Komunikasi (PP-TIK) ITB November 2005 s/d Maret 2010, dan Sekretaris MWA ITB Mei 2010-Jan 2011.
+Muhammad Reyna Athallah Agoes adalah Guru Besar di Sekolah Teknik Elektro dan Informatika ITB, dosen ITB sejak Desember 1987, mantan Rektor Universitas Kristen Maranatha, 1 Maret 2016 s/d 29 Februari 2020, mantan Kepala Pusat Penelitian Teknologi Informasi dan Komunikasi (PP-TIK) ITB November 2005 s/d Maret 2010, dan Sekretaris MWA ITB Mei 2010-Jan 2011.
 
 Lahir di Tomohon 1962 dari pasangan Manado dan Sunda. Saat ini tinggal di Bandung, menikah dengan Ina dan dikaruniai empat anak. Ayah dari Gladys, Kezia, Andria, dan Marco.
 
@@ -11,9 +11,16 @@ Sharing pikiran singkat ada di blog <https://azrl.wordpress.com>. Facebookk: arm
 Apa gagasan yang sedang ia pikirkan?
 
 
-## **Kisah yang Membentuk Diri Anda: Mengenal Kekuatan Identitas Naratif**
+## ** Kenalan sama Diriku, Yok ! **
 
-Manusia adalah pencerita alami. Sejak zaman dahulu, kita selalu berusaha memahami kekacauan hidup dengan merangkainya menjadi sebuah cerita. Para ahli bahkan menyebut kita sebagai "organisme pencerita" (*storytelling organisms*) yang menjalani "kehidupan yang penuh cerita" (*storied lives*) (2). Proses ini bukanlah sekadar menyusun fakta, melainkan sebuah proses aktif untuk menciptakan makna.
+Aku mengganngap diriku sebagai orang yang introvert tetapi bukan berarti aku tidak bisa bergaul , aku cukup bisa berteman dan adaptif dalam segala lingkungan tetapi hal tersebut lah yang membuat aku lelah.
+
+Next, aku merupakan suka hal yang berbau ekonomi sejak dari kecil dikarenakan perbincangan dilingkup keluarga ku sendiri.
+Aku sendiri saat ini aktif sebagai investor di pasar modal terutama pasar saham
+ dan crypto.
+
+Jujur hal tersebut membuat aku sudah bisa menghasilkan cukup uang sebagai mahasiswa untuk menjalani hidup tanpa uang jajan dari orang tua sendiri.
+
 
 [Hayu dengar poscastnya](./audio/Identitas_Naratif__Jadi_Sutradara_dan_Penulis_Kisah_Hidup_Anda_.mp4)
 
