--- a/My_Song_for_You/index.qmd
+++ b/My_Song_for_You/index.qmd
@@ -4,7 +4,7 @@ Post Wedding Kawah Putih
 Lirik by Armein Z. R. Langi
 Music: SUNO
 
-{{< video https://youtu.be/KWthEImJ9mY?si=iUV8Ghhj0R3gKQyZ>}}, with lyrics
+{{< video https://youtu.be/a7B2qGfhgx8 >}}, with lyrics
 
 Engkau
 [Intro]
