--- a/My_Song_for_You/index.qmd
+++ b/My_Song_for_You/index.qmd
@@ -1,160 +1,66 @@
 # UTS-2 My Songs for You
 
-Post Wedding Kawah Putih
-Lirik by Armein Z. R. Langi
-Music: SUNO
+SONG BY : **ARAH - Awal & Akhir**
 
-{{< video https://youtu.be/a7B2qGfhgx8 >}}, with lyrics
-
-Engkau
-[Intro]
-[verse1]
-Mereka bilang perlu Ribuan kata 
-untuk menyatakan cinta. 
-Tapi satu-satunya kata yang kutemukan
- adalah: engkau…
-
-[Verse 2]
-Hidup bergerak begitu deras 
-Siang malam datang dan pergi. 
-Mereka bilang semua itu 
-akan melunturkan cinta kita…
+{{< video https://youtu.be/DpthH4s3a2E?si=VrYSeevqrbkuV3em >}}
 
 
-[Chorus 1]
-Tetapi engkau masih di sini, 
-dengan tatapan cinta. 
-Engkau selalu di sini 
-dengan hati penuh kasih. 
+## Lirik Lagu “Awal & Akhir”
 
-[Chorus 2]
-Tahun demi tahun berlalu
-Cintamu menjadikan semua ini 
-begitu indah, Begitu bermakna. 
-Begitu menggairahkan.
+[Verse 1]  
+Akankah kita s’lalu ada  
+Bernafas dalam ruang yang sama  
+Akankah kita s’lalu satu  
+Bertukar aksara tak berucap  
 
-[Verse4]
-Peristiwa menimpa seperti badai tercurah dari langit. 
-Menerjang seperti seretan sungai. 
-Melemparku ke dalam dan ke luar, ke atas dan ke bawah, 
-menghanyutkanku gelagapan ke samudera raya…
+[Pre-Chorus]  
+Pastikan satu dalam rasa  
+Pastikan setiap maknanya  
+Pastikan satu dalam jiwa  
+Meski tidak bersama  
 
-[Chorus 1]
-Tetapi engkau masih di sini, 
-dengan tatapan cinta. 
-Engkau selalu di sini 
-dengan hati penuh kasih. 
+[Chorus]  
+Melangkah maju tidak harus bersama  
+Tapimu akan s’lalu ada di hati  
+Berakhir untuk awal yang baru  
+Berakhir tidak dalam jiwa  
 
-[Chorus 2]
-Tahun demi tahun berlalu
-Cintamu menjadikan semua ini 
-begitu indah, Begitu bermakna. 
-Begitu menggairahkan.
+[Verse 2]  
+Akankah kita selalu satu  
+Bertukar aksara tak berucap  
 
-[Coda 1]
-Sadarkah engkau 
-bahwa engkau telah menemukan 
-hukum baru tentang cinta? 
+[Pre-Chorus]  
+Pastikan satu dalam rasa  
+Pastikan setiap maknanya  
+Pastikan satu dalam jiwa  
+Meski tidak bersama  
+Every moment a new song begins  
+Even the stars seem to lean in  
 
-[Coda 2]
-Bahwa satu tambah satu sama dengan satu
-Satu kali satu adalah tak hingga? 
-Dua kurang satu sama dengan kosong. 
-Segala sesuatu tanpa engkau adalah tiada…?
+[Chorus]  
+Melangkah maju tidak harus bersama  
+Tapimu akan s’lalu ada di hati  
+Berakhir untuk awal yang baru  
+Berakhir tidak dalam jiwa  
 
-[Chorus 1]
-Tetapi engkau masih di sini, 
-dengan tatapan cinta. 
-Engkau selalu di sini 
-dengan hati penuh kasih. 
+[Pre-Chorus]  
+Pastikan satu dalam rasa  
+Pastikan setiap maknanya  
+Pastikan satu dalam jiwa  
+Meski tidak bersama  
 
-[Chorus 2]
-Tahun demi tahun berlalu
-Cintamu menjadikan semua ini 
-begitu indah, Begitu bermakna. 
-Begitu menggairahkan.
-[Outro]
+[Chorus]  
+Melangkah maju tidak harus bersama  
+Tapimu akan s’lalu ada di hati  
+Berakhir untuk awal yang baru  
+Berakhir tidak dalam jiwa  
 
+---
 
-Why am I singing for you? [River on my Mind](./Rivers%20In%20My%20Mind.mp3)
-, with lyrics
+## Makna Lagu dan Hubungannya dengan Diri Saya
 
-River on my mind
-[Verse]
-I do not know what has happened with your life
-I do not know how much you have suffered
-What I know is how to be me
-And I am still learning
+Lagu “Awal & Akhir” bagi saya adalah refleksi tentang perubahan, kehilangan, dan penerimaan hal-hal yang sangat dekat dengan perjalanan hidup saya. Liriknya menggambarkan bahwa dalam hidup, tidak semua yang dimulai akan berakhir dengan cara yang sama, namun setiap akhir selalu membawa awal yang baru. Kalimat *“Melangkah maju tidak harus bersama”* menggambarkan perpisahan dengan masa lalu, namun tetap menyimpan rasa dan kenangan yang tulus di hati. 
 
-[Chorus]
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
+Makna lagu ini juga mengajarkan bahwa berakhirnya sesuatu bukanlah kegagalan, melainkan sebuah transisi menuju fase yang lebih matang. Saya belajar untuk tidak lagi takut kehilangan, karena setiap akhir membuka ruang bagi pertumbuhan. Sama seperti lirik *“Berakhir untuk awal yang baru”*, saya menyadari bahwa kejatuhan saya menjadi titik balik yang menumbuhkan kesadaran dan kedewasaan. Kini saya lebih memaknai hidup dengan hati yang tenang, menghargai proses, dan menaruh kepercayaan pada perjalanan.
 
-[Verse]
-You deserve a caring heart
-And all of the most beautiful parts of this world
-You deserve a gentle touch
-And a soft place to land when you fall
-
-[Chorus]
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-
-[Bridge]
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-
-
-Falling in love everyday [Heaven on Earth](./Heaven%20on%20Earth.mp3), with lyrics
-
-Heaven on Earth
-[Verse]
-The breeze whispers soft to the sea
-A rhythm flows like it’s meant to be
-Every step feels lighter
-Free
-
-
-[Verse 2]
-The sunlight dances on your skin
-Every moment a new song begins
-Even the stars seem to lean in
-fresh
-
-[Chorus]
-Fall in love
-Fall in love
-Every day
-Let your heart find a brand-new way
-Heaven's here
-It’s not far above
-Life is beautiful when you love
-
-[Verse 2]
-The sunlight dances on your skin
-Every moment a new song begins
-Even the stars seem to lean in
-
-[Prechorus]
-Close your eyes
-Let it start
-Feel the world inside your heart
-
-[Chorus]
-Fall in love
-Fall in love
-Every day
-Let your heart find a brand-new way
-Heaven's here
-It’s not far above
-Life is beautiful when you love
-
-[Bridge]
-Catch the rain as it falls on your face
-Hear the laughter
-It fills every space
-Time is fleeting
-Don’t let it erase
-This heaven we chase
+Secara keseluruhan, lagu “Awal & Akhir” mengajarkan saya tentang kekuatan untuk bertahan dan melangkah, tentang ikhlas melepaskan tanpa kehilangan makna, dan tentang bagaimana setiap perpisahan dalam hidup bukanlah penutupan, melainkan awal bagi bab yang baru dalam perjalanan diri saya.
