--- a/intro.qmd
+++ b/intro.qmd
@@ -1,6 +1,6 @@
 # UTS-1 All About Me
 
-![About Me](images/AZRL.png){width=950%}
+![About Me](){width=950%}
 
 Armein Z R Langi adalah Guru Besar di Sekolah Teknik Elektro dan Informatika ITB, dosen ITB sejak Desember 1987, mantan Rektor Universitas Kristen Maranatha, 1 Maret 2016 s/d 29 Februari 2020, mantan Kepala Pusat Penelitian Teknologi Informasi dan Komunikasi (PP-TIK) ITB November 2005 s/d Maret 2010, dan Sekretaris MWA ITB Mei 2010-Jan 2011.
 
