--- a/All_About_me/index.qmd
+++ b/All_About_me/index.qmd
@@ -7,13 +7,13 @@
 Halo, perkenalkan, namaku **Muhammad Reyna Athallah Agoes**. Mahasiswa semester 3 di Institut Teknologi Bandung jurusan Sistem Teknologi dan Informasi.
 
 Kalau harus menggambarkan diriku dengan satu kata, mungkin kata itu adalah **“penasaran.”**
-Rasa penasaran itulah yang sejak SMP menuntunku pada dunia yang ternyata jadi bagian besar dari hidupku sekarang **bisnis dan keuangan**.
+Rasa penasaran itulah yang sejak SMP menuntunku pada dunia yang ternyata jadi bagian besar dari hidupku sekarang bisnis dan keuangan.
 
 Awalnya sederhana. Aku cuma suka melihat bagaimana orang bisa “membuat uang bekerja untuk mereka.” Aku mulai mencoba hal-hal kecil, seperti menjual barang, ikut proyek kecil, bahkan belajar sedikit tentang investasi dari video seorang investor terkemuka dunia, buku-buku mereka, dan tentang kehidupan mereka, tentunya juga belajar dan mencontoh hal baik dari ayahku sendiri. Di samping itu semua, aku memang suka bekerja dari situ aku pertama kali merasakan sensasi menghasilkan uang sendiri bukan karena disuruh, tapi karena ingin tahu bagaimana caranya.
 
 Rasanya bukan cuma senang karena punya uang, tapi karena aku menyadari: setiap rupiah yang kudapat punya cerita, usaha, dan nilai pembelajaran. Dari situ, aku jadi semakin tertarik dengan bagaimana uang, keputusan, dan strategi bisa saling terhubung untuk membentuk sesuatu yang lebih besar sebuah sistem, bisnis, bahkan gaya hidup.
 
-Seiring waktu, rasa ingin tahu itu tumbuh jadi semacam kompas dalam hidupku. Aku mulai belajar lebih dalam tentang **ekonomi, investasi, dan manajemen keuangan**, bukan sekadar untuk mencari keuntungan, tapi untuk memahami bagaimana dunia bergerak. Aku percaya, kalau kita memahami uang, kita bisa memahami perilaku manusia, keputusan, dan bahkan arah masa depan.
+Seiring waktu, rasa ingin tahu itu tumbuh jadi semacam kompas dalam hidupku. Aku mulai belajar lebih dalam tentang ekonomi, investasi, dan manajemen keuangan, bukan sekadar untuk mencari keuntungan, tapi untuk memahami bagaimana dunia bergerak. Aku percaya, kalau kita memahami uang, kita bisa memahami perilaku manusia, keputusan, dan bahkan arah masa depan.
 
 Tapi di balik semua itu, aku tetap percaya bahwa bisnis bukan hanya soal angka.
 Bisnis adalah tentang **kepercayaan, komunikasi, dan nilai kemanusiaan.**
