--- a/My_Shapes/index.qmd
+++ b/My_Shapes/index.qmd
@@ -1,5 +1,6 @@
 # UTS-4 My SHAPE (Spiritual Gifts, Heart, Abilities, Personality, Experiences)
 
+
 **Spiritual Gifts (S)**
 Aku merasa memiliki kemampuan untuk memberi semangat dan menginspirasi orang lain. Dalam situasi sulit, aku sering mencoba membuat orang di sekitarku tetap optimis dan tidak kehilangan arah. Aku percaya bahwa setiap kata penyemangat yang tulus bisa menjadi energi positif bagi orang lain. Inilah bentuk *spiritual gift* yang ingin terus aku kembangkan — menjadi seseorang yang bisa menyalurkan kekuatan dan harapan melalui empati dan kehadiran.
 
@@ -10,7 +11,7 @@ Sejak SMP aku sudah tertarik pada dunia bisnis, keuangan, dan investasi. Ada kep
 
 ---
 
-#### **Abilities (A)**
+**Abilities (A)**
 Aku memiliki kemampuan berpikir analitis dan strategis, terutama dalam memahami data dan mencari pola yang bisa digunakan untuk mengambil keputusan. Selain itu, aku juga terbiasa menggunakan teknologi informasi untuk meningkatkan efisiensi dan ketepatan kerja. Kombinasi antara kemampuan analitik dan pemahaman teknologi ini menjadi bekal yang kuat untuk meniti karier di bidang yang menggabungkan bisnis dan teknologi.
 
 ---
