--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 # Hai, Halo, Kenalan dengan Aku Yok ! {.unnumbered}
 
-![](images/muka_gw.jpg){width=90%}
+![](images/muka_gw.jpg){width=100%}
 
 Perkenalkan , Muhammad Reyna Athallah Agoes mahasiswa di Sekolah Teknik Elektro dan Informatika.ITB angkatan 2024.
 
-**Sayangi Orang Sekitarmu dan Maknai Hidup Lebih Dalam**
+**"Sayangi Orang Sekitarmu dan Maknai Hidup Lebih Dalam"**
