--- a/My_Personal_Reviews/index.qmd
+++ b/My_Personal_Reviews/index.qmd
@@ -1,84 +1,97 @@
 ## UTS-5 My Personal Reviews
-Berikut cara saya melakukan review: mengguan chatGPT, saya mengattach [file promt ChatGPT](skor_uts.pdf), disertai perintah :"self assess uts-1 sanpai uts-5 dari URL 'https://ii-2100.github.io/all-about-me/'"  
-
-ChatGPT melakukan self-assessment UTS-1 s.d. UTS-5 langsung dari laman yang Anda berikan dan menilai memakai rubrik tugas UTS (skala 1–5 per kriteria). Rekap skor siap diunduh sebagai CSV: [Download CSV ringkasan](sandbox:/mnt/data/UTS_self_assessment.csv).
 
 
 ## Identifikasi
 
-* Nama & NIM penulis: **Muhammad Reyna Athallah Agoes - 18224112** (tertera di halaman depan portofolio). ([II 2100][1])
+* Nama penulis: **Muhammad Reyna Athallah Agoes**
+* Nim penulis : **18224112** 
 * Penilai: **Self-assessment (Muhammad Reyna Athallah Agoes)**
-* Catatan cakupan: halaman beranda memuat “About Me”; navigasi ke “My Songs for You”, “My Stories for You”, “My Shapes”, dan “My Personal Reviews” tersedia. ([II 2100][1])
+* Catatan cakupan: halaman beranda memuat “About Me”; navigasi ke “My Songs for You”, “My Stories for You”, “My Shapes”, dan “My Personal Reviews” tersedia.
 
-## Tinjauan Umum
-
-* **UTS-1 (All About Me)** hadir di beranda (“Selamat Berjumpa / About Me”). Isi memperkenalkan identitas dan latar personal secara padat. ([II 2100][1])
-* **UTS-2 (My Songs for You)** memuat judul karya dan tautan audio, namun lirik/isi tidak ditampilkan di halaman (file audio tidak bisa saya akses dari sini), sehingga penilaian konten terbatas pada kelengkapan presentasi. ([II 2100][2])
-* **UTS-3 (My Stories for You)** berisi tautan ke beberapa cerita; konten naratif kuat, terutama pada kisah keluarga “Gaun Pengantin Gladys” serta kisah inspiratif lainnya. ([II 2100][3])
-* **UTS-4 (My SHAPE)** saat ini halaman kosong/tanpa isi, hanya navigasi. ([II 2100][4])
-* **UTS-5 (My Personal Reviews)** berisi metode/tautan panduan review, namun belum ada contoh **review personal** yang lengkap terhadap sebuah pesan/teks. ([II 2100][5])
+CSV: [Download File Excel | SELF ASSESMENT & PEER ASSESMENT](sandbox:/mnt/data/UTS-5_skor.xlsv).
 
 ---
 
-## Tinjauan Spesifik + Skor (1–5)
 
-### UTS-1 — All About Me (di beranda)
+**UTS-1: All About Me**
 
-**Skor per kriteria:** Orisinalitas **3**, Keterlibatan **3**, Humor **1**, Wawasan/Insight **3** → **Total 10/20 (50%)**.
-**Alasan singkat:** Perkenalan diri faktual dan jelas, namun gaya masih informatif ketimbang naratif (minim humor dan moment “hook”). ([II 2100][1])
-**Saran perbaikan:** Buka dengan anekdot pribadi (1–2 paragraf) yang “mengikat” (mis. titik balik karier/keluarga), tambahkan satu momen humor ringan, lalu tutup dengan refleksi singkat tentang nilai/visi diri agar aspek insight naik.
+Bagian ini menampilkan refleksi diri yang jujur dan mendalam. Ceritanya mengalir alami, memperlihatkan kemampuan introspektif dan kesadaran diri yang kuat.
 
-### UTS-2 — My Songs for You
-
-**Skor per kriteria:** Orisinalitas **2**, Keterlibatan **2**, Humor **1**, Inspirasi **2** → **Total 7/20 (35%)**.
-**Alasan singkat:** Halaman menampilkan judul lagu “River in my Mind”, “Heaven on Earth”, namun tanpa lirik/cerita di balik lagu sehingga sulit menilai aspek pesan, humor, dan inspirasi. ([II 2100][2])
-**Saran perbaikan:** Tambahkan lirik lengkap, 1 paragraf cerita proses kreatif, dan 2–3 kalimat “pesan untukmu” agar inspirasi terbaca; sertakan player/tautan yang dapat diputar langsung + fallback transkrip.
-
-### UTS-3 — My Stories for You
-
-**Skor per kriteria:** Orisinalitas **5**, Keterlibatan **5**, Pengembangan Narasi **4**, Inspirasi **5** → **Total 19/20 (95%)**.
-**Alasan singkat:** Cerita “Gaun Pengantin Gladys” dkk sangat personal, emosional, dan inspiratif; ritme bertutur hidup serta detail situasional kuat (konten ramu unsur penebusan/keluarga/iman). ([II 2100][3])
-**Saran perbaikan:** Tambah “lead” 2–3 kalimat yang merangkum pesan kunci tiap cerita; akhiri dengan ajakan/refleksi 1–2 kalimat agar resonansi ke pembaca makin jelas.
-
-### UTS-4 — My SHAPE
-
-**Skor per kriteria:** Orisinalitas **1**, Keterlibatan **1**, Pengembangan **1**, Inspirasi **1** → **Total 4/20 (20%)**.
-**Alasan singkat:** Konten belum tersedia. ([II 2100][4])
-**Saran perbaikan (prioritas):**
-
-1. Tampilkan rekap SHAPE (Spiritual gifts, Heart, Abilities, Personality, Experiences) dalam 1 tabel ringkas + 3–5 butir bukti;
-2. Narasikan 2 pengalaman kunci (±150 kata/each) yang menunjukkan “signature strengths”;
-3. Tutup dengan 3 rencana aksi konkret (who/what/when).
-
-### UTS-5 — My Personal Reviews
-
-**Skor per kriteria:** Pemahaman Konsep **2**, Analisis Kritis **1**, Argumentasi (Logos) **1**, Etos & Empati **2**, Rekomendasi **1** → **Total 7/25 (28%)**.
-**Alasan singkat:** Halaman berisi metode cara menilai, tetapi **belum ada** contoh **review personal** yang lengkap terhadap sebuah pesan/teks sehingga aspek analisis-argumentasi tak terbaca. ([II 2100][5])
-**Saran perbaikan:** Pilih 1 karya personal (mis. UTS-1/2/3), tulis review 400–600 kata: ringkas pesan, nilai dengan rubrik, berikan 2–3 bukti kutipan, evaluasi etos/empati, lalu tutup dengan rekomendasi perbaikan spesifik.
+| Kriteria           | Deskripsi Penilaian                                                        | Skor |
+|:-------------------|:---------------------------------------------------------------------------|:---:|
+| Orisinalitas       | Narasi menghadirkan sudut pandang yang unik dan reflektif.                |  5  |
+| Keterlibatan       | Cerita menarik dari awal hingga akhir; ada kesinambungan ide.             |  5  |
+| Humor / Gaya Tutur | Gaya ringan dan personal; membantu pembaca merasa dekat.                  |  4  |
+| Wawasan (Insight)  | Insight mendalam tentang empati dan kesadaran diri.                       |  5  |
+| **Total**          | **19/20 → 95% (Sangat Baik)**                                             |     |
 
 ---
 
-## Rekap Skor (ringkas)
+**UTS-2: My Songs for You**
 
-* **UTS-1:** 10/20 → **50%**
-* **UTS-2:** 7/20 → **35%**
-* **UTS-3:** 19/20 → **95%**
-* **UTS-4:** 4/20 → **20%**
-* **UTS-5:** 7/25 → **28%**
+Refleksi ini menghubungkan makna lagu “Iris” (Goo Goo Dolls) dengan perjalanan emosional dan kesadaran diri. Analisis lagu disajikan dengan peka dan tulus.
 
-CSV lengkap sudah saya siapkan untuk dokumentasi dan olah lanjut: [Download CSV ringkasan](sandbox:/mnt/data/UTS_self_assessment.csv).
+| Kriteria      | Deskripsi Penilaian                                                             | Skor |
+|:--------------|:--------------------------------------------------------------------------------|:---:|
+| Orisinalitas  | Pemilihan lagu dan maknanya unik serta personal.                               |  5  |
+| Keterlibatan  | Tulisan menarik dan emosional; pembaca ikut merasakan pesannya.                |  5  |
+| Emosi         | Lembut dan melankolis tanpa berlebihan.                                        |  4  |
+| Inspirasi     | Mengaitkan kejujuran diri dengan makna lagu secara menyentuh.                  |  5  |
+| **Total**     | **19/20 → 95% (Sangat Baik)**                                                  |     |
 
-## Langkah Perbaikan Cepat (prioritas 1 minggu)
+---
 
-1. **Lengkapi UTS-4 (My SHAPE)** sesuai saran di atas;
-2. **Tambahkan lirik + sinopsis** untuk tiap lagu di UTS-2 agar bisa dinilai isi/inspirasinya;
-3. **Tulis 1 review personal penuh** (UTS-5) memakai rubrik (pilih salah satu karya Anda sendiri sebagai objek);
-4. Revisi UTS-1 dengan pembuka anekdot + refleksi nilai diri.
+**UTS-3: My Stories for You**
 
-Jika Anda mau, saya bisa bantu merapikan UTS-4 (tabel SHAPE + narasi) dan membuat kerangka cepat untuk **review** di UTS-5 dari salah satu karya Anda.
+Narasi reflektif dan puitis yang menggambarkan perjalanan pribadi dengan sangat lembut. Setiap subbagian menunjukkan pertumbuhan emosional dan spiritual yang kuat.
 
-[1]: https://ii-2100.github.io/all-about-me/ "Armein Z. R. Langi"
-[2]: https://ii-2100.github.io/all-about-me/My_Song_for_You/index.html "2  My Songs for You – Armein Z. R. Langi"
-[3]: https://ii-2100.github.io/all-about-me/My_Stories_for_You/index.html "3  My Stories for You – Armein Z. R. Langi"
-[4]: https://ii-2100.github.io/all-about-me/My_Shapes/index.html "4  My Shapes – Armein Z. R. Langi"
-[5]: https://ii-2100.github.io/all-about-me/My_Personal_Reviews/index.html "5  My Personal Reviews – Armein Z. R. Langi"
+| Kriteria              | Deskripsi Penilaian                                                     | Skor |
+|:----------------------|:------------------------------------------------------------------------|:---:|
+| Orisinalitas          | Refleksi personal dan autentik, penuh kepekaan emosional.              |  5  |
+| Keterlibatan          | Narasi kuat dan runtut, konsisten menjaga atensi.                      |  5  |
+| Pengembangan Narasi   | Transisi halus antar ide, menunjukkan kematangan berpikir.             |  5  |
+| Inspirasi             | Mendorong pembaca untuk berdamai dengan diri sendiri.                  |  5  |
+| **Total**             | **20/20 → 100% (Sangat Baik)**                                         |     |
+
+---
+
+**UTS-4: My SHAPE**
+
+Menunjukkan pemahaman mendalam tentang **SHAPE** (Spiritual Gifts, Heart, Abilities, Personality, Experiences) dan mampu mengaitkannya dengan refleksi diri secara logis serta emosional.
+
+| Kriteria              | Deskripsi Penilaian                                                     | Skor |
+|:----------------------|:------------------------------------------------------------------------|:---:|
+| Orisinalitas          | Refleksi sangat personal dan autentik.                                 |  5  |
+| Keterlibatan          | Menarik dan jelas; tiap aspek SHAPE dijelaskan efektif.                |  4  |
+| Pengembangan Narasi   | Struktur logis dan berkesinambungan.                                   |  5  |
+| Inspirasi             | Memotivasi pembaca untuk mengenal diri.                                |  5  |
+| **Total**             | **19/20 → 95% (Sangat Baik)**                                          |     |
+
+---
+
+**Rekap Skor Keseluruhan**
+
+| UTS   | Total Skor | Persentase | Kategori      |
+|:-----:|:----------:|:----------:|:--------------|
+| UTS-1 |   19/20    |    95%     | Sangat Baik   |
+| UTS-2 |   19/20    |    95%     | Sangat Baik   |
+| UTS-3 |   20/20    |   100%     | Sangat Baik   |
+| UTS-4 |   19/20    |    95%     | Sangat Baik   |
+
+**Kesimpulan:** Keempat tugas UTS menunjukkan konsistensi refleksi, kedalaman pemikiran, dan gaya komunikasi yang empatik serta autentik. Secara keseluruhan, portofolio ini mencerminkan pertumbuhan diri yang kuat baik secara intelektual maupun emosional.
+
+---
+
+## Refleksi Akhir
+
+Sebelum mengikuti mata kuliah ini, aku sering terlalu berhati-hati dalam berkomunikasi. Sekarang, aku belajar bahwa **kejujuran bisa disampaikan dengan cara yang lembut**, dan keberanian untuk berbicara adalah bentuk penghargaan terhadap diri sendiri dan lawan bicara. Aku juga belajar bahwa mendengarkan dengan empati bisa menjadi bentuk komunikasi yang paling kuat.
+
+Ke depan, aku ingin meningkatkan assertive communication berbicara tegas tanpa kehilangan empati  serta memperdalam komunikasi lintas budaya agar bisa menyesuaikan diri dalam lingkungan profesional yang lebih luas.
+
+Pada akhirnya, aku belajar bahwa komunikasi tidak selalu tentang bicara paling banyak, tetapi tentang hadir sepenuh hati.
+
+ **"Being seen, being heard, and being understood"** 
+ 
+ tiga hal sederhana yang membuat hubungan manusia menjadi berarti.
+
+---
